--- a/Research/.classpath
+++ b/Research/.classpath
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="MineCraft/src"/>
+	<classpathentry kind="src" path="MotionArithmetic/src"/>
+	<classpathentry kind="src" path="Tracker/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="/home/davis/cmonkey-code/Lib/jbox2d-library-2.1.2.2.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/Research"/>
-	<classpathentry kind="output" path="MineCraft/bin"/>
+	<classpathentry kind="output" path="MotionArithmetic/bin"/>
 </classpath>
